chandeliers-lus/tests/compile_fail/ui/clk/too-fast.stderr
error: Mismatch between clocks: 'when b on the left but 'self on the right
 --> tests/compile_fail/ui/clk/too-fast.rs:7:9
  |
7 |         n = if b then 1 else 2;
  |         ^^^^^^^^^^^^^^^^^^^^^^
  |
note: This is clocked by 'when b
 --> tests/compile_fail/ui/clk/too-fast.rs:7:9
  |
7 |         n = if b then 1 else 2;
  |         ^
note: due to this
 --> tests/compile_fail/ui/clk/too-fast.rs:4:22
  |
4 |         n : int when b;
  |                      ^
note: This is clocked by 'self
 --> tests/compile_fail/ui/clk/too-fast.rs:7:13
  |
7 |         n = if b then 1 else 2;
  |             ^^^^^^^^^^^^^^^^^^
